
0.4.3
=====

* FEATURE: Add "Watch Topic" checkbox when editing.

0.4.2
=====

* FEATURE: Add support for watchlists as described on
  http://meta.wikimedia.org/wiki/Help:Watching_pages.
* FEATURE: AdminOnlyTopics replaced by Special:TopicsAdmin.
* FEATURE: Upgrade to Spring Framework 2.0.
* BUG: Refreshing after a form submission should no longer cause information
  to be resubmitted.
* FEATURE: "Go To" button in search should redirect to search results if
  no such topic exists.
* FEATURE: Be more efficient with caching to improve performance.
* FEATURE: Add a checkbox to Special:Manage to delete/undelete an associated
  comments page.
* FEATURE: Provide an option to set maximum table of contents depth.
* FEATURE: After editing a section, page will now reload to that section.
* BUG: Fix parsing error when template parameters are preceded by whitespace.
* BUG: Fix error when uploading files with non-English file names.
* BUG: Recompile the HSQL JAR file to allow use with JDK 1.4.
* FEATURE: Remove option to disable topic versioning.
* BUG: Some unhandled exceptions could cause confusing error messages to be
  shown to the user, now fixed.
* BUG: JUnit 4.1 requires JDK 1.5, downgrade to JUnit 3.8.2.
* FEATURE: Update default start page text.
* FEATURE: Updated Polish translations from Robert Matyja (dlpa).
* FEATURE: Updated Hungarian translations from Daniel Tar (bDaneE).

0.4.1
=====

* BUG: Fix a setup bug that could incorrectly report that a database already
  exists.

0.4.0
=====

* FEATURE: Add support for Mediawiki templates (see 
  http://meta.wikimedia.org/wiki/Help:Templates).
* FEATURE: Replace file persistency mode with an embedded version of the
  HSQL database.
* FEATURE: Major update to the JAMWiki parser code.
* BUG: Properly escape ampersands from the parser to ensure XHTML output.
* FEATURE: Updated interwiki file from Axel Kramer (axelclk).
* FEATURE: Process interwiki prefixes case-insensitive.